--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,135 @@
-/* Add a black background color to the top navigation */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #3b3b3b;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    background: #2b2b2b;
+  }
 
-*{
-    box-sizing: border-box;
-    margin: 3px;
-    padding: 0;
-    background-color: white;
-}
+  nav {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      min-height: 8vh;
+    }
 
-li, a, button {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: black;
-    text-decoration: none;
-}
+  .logo{
+      color: rgb(231, 231, 231);
+      text-transform: uppercase;
+      letter-spacing: 5px;
+      font-size: 22px;
+  }
+  .nav_links{
+      color: rgb(231, 231, 231);
+      display: flex;
+      justify-content: space-around;
+      width: 30%;
+  }
+  .nav_links a{
+      color: rgb(231, 231, 231);
+      text-decoration: none;
+      letter-spacing: 5px;
+      font-weight: bold;
+      font-size: 14px;
+  }
+  
 
-header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: right;
-    padding: 30px 10%;
-}
-
-.logo {
-    cursor: pointer;
-    margin-right: auto;
-}
-
-.nav_links {
-    list-style: none;
-}
-
-.nav_links li {
-    display: inline-block;
-    padding: 0px 20px;
-}
-
-.nav_links li a {
-    transition: all 0.3s ease 0s;
-}
-
-.nav_links li a:hover {
-    color: #0088a9;
-}
+  .nav_links li{
+      list-style: none;
+  }
 
 
-/* table{
-    width: 400px;
-    align: center;
-    margin: 10px auto;
-}
 
-th {
-    text-align: center;
-}
+  @media screen and (max-width: 580px) {
+    body {
+      font-size: 16px;
+      line-height: 22px;
+      border-radius: 50px;
+      padding: 0 10px;
+    }
+  }
+  
+  .wrapper {
+    margin: 0 auto;
+    padding: 40px;
+    max-width: 800px;
+  }
+  
+  .table {
+    margin: 0 0 40px 0;
+    width: 100%;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    display: table;
+  }
+  @media screen and (max-width: 580px) {
+    .table {
+      display: block;
+    }
+  }
+  
+  .row { 
+    display: table-row;
+    background: #f6f6f6;
+  }
+  .row:nth-of-type(odd) {
+    background: #e9e9e9;
+  }
+  .row.header {
+    font-weight: 900;
+    color: #ffffff;
+    background: #ea6153;
+  }
+  .row.green {
+    background: #27ae60;
+  }
+  .row.blue {
+    background: #2980b9;
+  }
+  @media screen and (max-width: 580px) {
+    .row {
+      padding: 14px 0 7px;
+      display: block;
+    }
+    .row.header {
+      padding: 0;
+      height: 6px;
+    }
+    .row.header .cell {
+        align-items: center;
+        display: none;
+    }
+    .row .cell {
+      margin-bottom: 10px;
+    }
+    .row .cell:before {
+        align-items: center;
+        margin-bottom: 3px;
+        content: attr(data-title);
+        min-width: 98px;
+        font-size: 10px;
+        line-height: 10px;
+        font-weight: bold;
+        text-transform: uppercase;
+        color: #969696;
+        display: block;
+    }
+  }
+  
+  .cell {
+    padding: 6px 12px;
+    display: table-cell;
+  }
+  @media screen and (max-width: 580px) {
+    .cell {
+      padding: 2px 16px;
+      display: block;
+    }
+  }
 
-table, th, td {
-    border: 1px solid #000000;
-    border-collapse: collapse;
-} */
-
-.content-table {
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9cm;
-    min-width: 400px;
-}
-
-.content-table thead tr {
-    background-color:black;
-    color:  black
+.searchbox{
+    border-radius: 40px;
+    
 }
