--- a/new_design (without php)/styles.css
+++ b/new_design (without php)/styles.css
@@ -4,6 +4,7 @@ html, body {
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    height: 100%;
 }
 
 nav{
@@ -33,6 +34,13 @@ nav{
     width:20%;
 }
 
+.hero-image {
+    height: 100%;
+    background-position: center;
+    background-repeat: repeat-y;
+    background-size: cover;
+}
+
 .nav-links a{
     text-decoration: none;
     color: white;
@@ -50,6 +58,7 @@ nav{
     position: absolute;
     text-align: center;
     font-weight: bolder;
+    font-size: 20px;
     top: 12%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -57,7 +66,7 @@ nav{
 }
 .opening-words {
     position: absolute;
-    top: 18%;
+    top: 21%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
@@ -66,7 +75,8 @@ nav{
 
 .search-box {
     position: absolute;
-    top: 28%;
+    top: 30%;
+    padding: 1px 2px 2px 1px;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
@@ -119,12 +129,14 @@ nav{
 
 .content-table {
     border-collapse: collapse;
+    align-items: center;
     margin: 25px 0;
     font-size: 0.9em;
     min-width: 400px;
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    font-size: 20px;
 }
 
 .content-table thead tr {
@@ -151,9 +163,87 @@ nav{
 }
 
 .city-region {
+    font-size: 20px;
     position: absolute;
     top: 65%;
+    margin: 3rem;
     background-color: white;
-    padding: 0 0 28px 28px;
+    padding: 6px 60px 60px 60px;
+    border-radius: 18px;
+    border: 1px solid grey;
+    
+}
+
+.stas-name,
+.index-name,
+.city,
+.river {
+    text-align: center;
+}
+
+.about-us {
+    position: absolute;
+    top: 115%;
+    font-size: 20px;
+    position: absolute;
+    margin: 3rem;
+    background-color: white;
+    padding: 6px 60px 60px 60px;
     border-radius: 18px;
 }
+
+/* Popup Text 
+
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  .popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+  }
+
+  .popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  /* Toggle this class - hide and show the popup */
+
+  /*.popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+  }
+  
+  /* Add animation (fade in the popup) */
+  /*@-webkit-keyframes fadeIn {
+    from {opacity: 0;} 
+    to {opacity: 1;}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }*/
