--- a/design 2.0 (with php)/style.css
+++ b/design 2.0 (with php)/style.css
@@ -30,6 +30,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    margin: 80px;
 }
 
 .header2 img {
