--- a/style.css
+++ b/style.css
@@ -89,6 +89,15 @@ body{
     align-items: center;
 }
 
+.btn{
+    border-radius: 10px;
+    border: 2px solid white;
+    border-color: none;
+    color: black;
+    background-color: white;
+    font-size: 20px;
+}
+
 /* content */
 
 .content {
