--- a/style.css
+++ b/style.css
@@ -151,3 +151,75 @@ body{
 .content-text-2 {
     text-align: left;
 }
+
+/* Pop-Up */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    border-radius: 10px;
+    margin: auto;
+    padding-top: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: 8px;
+    border: 1px solid #888;
+    width: 50%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    padding-right:10px; 
+    padding-bottom: 50px;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .header4{
+      text-align:center;
+      padding-top: 25px;
+      font-weight: bolder;
+      color: white;
+  }
+  
+  .table{
+      margin-left: auto;
+      margin-right: auto;
+      min-width: 400px;
+  }
+  
+  .table td, th{
+      text-align:center;
+      padding-left: 20px;
+      padding-right: 20px;
+  }
+  
+  .table th{
+      padding-top: 15px;
+  }
+  
+  .header-frame {
+      background: #222831;
+  }
