fixing and finalization front-end

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body{
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    -webkit-animation: fadeIn ease 1s;
+    -moz-animation: fadeIn ease 1s;
+    -o-animation: fadeIn ease 1s;
+    -ms-animation: fadeIn ease 1s;
 }
 
 .first-page{
@@ -24,20 +28,7 @@ body{
     background-position: center;
 }
 
-.header1 img {
-    height: 60px;
-}
-
-.header2 {
-    /* darker background */
-    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../images/3.jpg);
-    height: 90px;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    margin: 80px;
-}
-
+.header1 img,
 .header2 img {
     height: 60px;
 }
@@ -89,11 +80,6 @@ body{
     border-bottom: 1px solid white;
 }
 
-/* button */
-.container-search button{
-    align-items: center;
-}
-
 .btn{
     border-radius: 10px;
     border: 2px solid white;
@@ -141,7 +127,7 @@ body{
 .container-2 {
     margin-left: 10rem;
     margin-right: 10rem;
-    top: 5%;
+    top: 3%;
     position: relative;
     padding: 20px 50px 20px 50px;
     background-color: white;
@@ -169,10 +155,8 @@ body{
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s;
   }
-  
+
   /* Modal Content */
   .modal-content {
     background-color: #fefefe;
@@ -184,9 +168,15 @@ body{
     padding-bottom: 8px;
     border: 1px solid #888;
     width: 50%;
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s;
+    /*fade in*/
+    animation: fadeIn ease 1s;
+    -webkit-animation: fadeIn ease 1s;
+    -moz-animation: fadeIn ease 1s;
+    -o-animation: fadeIn ease 1s;
+    -ms-animation: fadeIn ease 1s;
   }
+
+  
   
   /* The Close Button */
   .close {
@@ -196,6 +186,8 @@ body{
     font-weight: bold;
     padding-right:10px; 
     padding-bottom: 50px;
+    animation: fadeIn ease 1s;
+    
   }
   
   .close:hover,
@@ -231,21 +223,24 @@ body{
   .header-frame {
       background: #222831;
   }
-}
+
+
 /* IMAGE ABOUT */
 
+.content-2 img.img-about{
+    height: 110px;
+    padding-left: 4px;
+    padding-right: 1px;
+}
+
 @media only screen and (max-width: 1490px) {
-    .content-2 .img-about {
+    .content-2 .img-about{
         display: none;
     } 
-    .break-1 {
+    .break-1{
         display: none;
     }
 }
-  
-.content-2 .img-about {
-    height: 98px;
-} 
 
 /*popup-button*/
 .popup-button{
@@ -261,4 +256,30 @@ body{
 /* Indikator */
 .indikator {
     text-align: center;
+}
+
+/* Additional CSS*/
+@keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+    
+@-moz-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+    
+@-webkit-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+    
+@-o-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+    
+@-ms-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
 }
